add answer image

--- a/public/html/add_question.html
+++ b/public/html/add_question.html
@@ -28,8 +28,13 @@
 
 			<br>
 
-			<label for="image"></label>
+			<label for="image">Question Image</label>
 			<input type="file" name="question_image" id="image">
+
+			<br>
+
+			<label for="image">Answer Image</label>
+			<input type="file" name="answer_image" id="image">
 
 			<button>Submit</button>
 		</form>
