--- a/public/html/add_question.html
+++ b/public/html/add_question.html
@@ -17,7 +17,7 @@
 				<label for="question">Question</label>
 				<textarea name="question" id="question" class="form-control"></textarea>
 			</div>
-			
+
 			<br><br>
 
 			<label for="answers">Answer</label>
@@ -29,11 +29,13 @@
 			<br>
 
 			<label for="image">Question Image</label>
+			<input type="checkbox" name="question_image_check" id="imageQCheck">
 			<input type="file" name="question_image" id="image">
 
 			<br>
 
 			<label for="image">Answer Image</label>
+			<input type="checkbox" name="answer_image_check" id="imageACheck">
 			<input type="file" name="answer_image" id="image">
 
 			<button>Submit</button>
