Final with questions

--- a/public/html/add_question.html
+++ b/public/html/add_question.html
@@ -22,7 +22,8 @@
 
 			<label for="answers">Answer</label>
 			<div id="answerField">
-				<input type="text" name="answers[]" id="answers">
+				<textarea name="answers[]" id="answers"></textarea>
+				<!-- <input type="text" > -->
 			</div>
 			<button id="newAnswer" type="button">Add New Answer</button>
 
