Final with saving state

--- a/public/html/back.html
+++ b/public/html/back.html
@@ -131,6 +131,10 @@
 					</tbody>
 				</table>
 			</div>
+			<div class="col-lg-3">
+				<h3>Save and Load State</h3>
+				<button id="save">Save State</button>
+			</div>
 		</div>
 	</div>
 	</body>
